src/objects/Client_Outcome__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NB: TO ADD NEW STATUS FIRST OPEN REFERRAL **</relationshipLabel>
        <relationshipName>Client_Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Status_All_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Status - All Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Status_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Status - Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Status_Quarter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Status - Quarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Status_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Status - Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>TEXT(Referral__r.Client__r.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Work_Type__c</fullName>
        <label>Group Work Type</label>
        <picklist>
            <picklistValues>
                <fullName>Changing Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World of Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychometric Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troika Softskills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stabilisation Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Support Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Release Modules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traveller Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safe Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accredited Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None/Not applicable</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Month__c</fullName>
        <formula>If ((Month( Placement_Date__c )+1=MONTH(TODAY()) &amp;&amp;Year( Placement_Date__c )=Year(TODAY())  ),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Creationn_Date__c</fullName>
        <label>Legacy Creationn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Edit_By__c</fullName>
        <label>Legacy Edit By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Edit_Date__c</fullName>
        <label>Legacy Edit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(MONTH(  Placement_Date__c  ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>All other labourers and related workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assemblers/Lineworkers (Metal Goods)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chefs/Cooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaners Domestics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver&apos;s Mates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drivers of road goods vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fork Lift and mechanical truck drivers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardeners &amp; Groundsmen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horticultural trades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Porters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Porters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kitchen Porters, Hands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launderers, Dry Cleaners, Pressers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mates to building trades workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messengers, Couriers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Assemblers/Lineworkers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packers, Bottlers, Canners, Fillers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Road construction and maintenace workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Gaurds &amp; Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storekeepers &amp; Warehousemen/women</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Typists &amp; Word porcessor operators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tyre &amp; Exhaust Fitters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Occupation__c</fullName>
        <label>Other Occupation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Types__c</fullName>
        <label>Final Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Addiction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apprenticeship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE Scheme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Service Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR Non-Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR Resettlement Support Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged But Discontinued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidance Only Complete (HRO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASIO group work programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jobs Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literacy Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACE on TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATHWAYS on TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol referral to Intreo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resettlement Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported access to essential services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported stability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Workshop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outcome_Weighting__c</fullName>
        <formula>CASE( TEXT(Outcome_Types__c) , &quot;CR Resettlement Support Complete&quot;, 0.75, &quot;Guidance Only Complete (HRO)&quot;, 0.75, &quot;Guidance Complete&quot;, 0.75,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Weighting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement_Date__c</fullName>
        <label>Outcome Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Placement_Ref__c</fullName>
        <label>Placement Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Release_Outcome__c</fullName>
        <label>Post-Release Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Apprenticeship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE scheme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Work Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidance Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASIO group work programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Psychometric Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jobs club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol referral to Intreo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychometric Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resettled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solas Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported access to essential services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported stability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support to Family Stability &amp; Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traveller initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Returns Scheme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None/Not applicable</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Release_Placement__c</fullName>
        <label>Placement</label>
        <picklist>
            <picklistValues>
                <fullName>CE Scheme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jobs Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traveler Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Returns Scheme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None/Not applicable</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Release_Outcome__c</fullName>
        <label>Pre-Release Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Addiction Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Integration Plan complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escorted Day Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidance Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPU CWO Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASIO Group work programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Psychometric Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literacy course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACE on TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathways on TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol referral to Intreo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychometric Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral to Other Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resettled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resettlement Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resettlement Plan Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported Referral to Another Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported Stability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support to Family Stability &amp; Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Programme on TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troika soft skills programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work &amp; Training Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Placement on TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None/Not applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison based work or training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Discontinued__c</fullName>
        <label>Reason for Discontinued</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>CR Non Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not engage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug/Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illness/Sickness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inappropriate Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold by Referring Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released from custody</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned to custody</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Progression Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unexpected Release</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_TEO__c</fullName>
        <formula>TEXT(Referral__r.TEO__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral TEO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <label>Referral</label>
        <referenceTo>Client_Referral__c</referenceTo>
        <relationshipLabel>Client Status &amp; Outcomes</relationshipLabel>
        <relationshipName>Client_Placements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revenue_Assist_Programme_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Assist Programme Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Accommodation food service activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative and support service activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture, Forestry and Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial, insurance and real estate activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human health and social work activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information and communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other NACE activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional, Scientific and technical activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public administration and defence; compulsory social security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation and Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale and Retail Trade; Repair of Motor Vehicles and Motor Cycles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Addiction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Welfare Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Welfare Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Supports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Card Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeless Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training and Education Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None/Not applicable</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brief Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE Scheme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR Non-Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Engage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged but Discontinued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inappropriate Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intra-programme transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Met To Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Progression Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resettled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resettlement Plan Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported Referral to Another Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer to another TEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unexpected Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to Guidance and Placement Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRRS Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidance Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support To Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support To Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Employer_and_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support To Employer and Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Course_Title__c</fullName>
        <label>Training Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Client Status &amp; Outcomes</label>
    <listViews>
        <fullName>Gate_Active</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Status__c</columns>
        <columns>Post_Release_Placement__c</columns>
        <columns>Programme__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Legacy_Created_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Programme__c</field>
            <operation>contains</operation>
            <value>Gate</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Gate Active Clients</label>
    </listViews>
    <listViews>
        <fullName>Linkage_StatusReport2013</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Outcome_Types__c</columns>
        <columns>Final_Status_Year__c</columns>
        <columns>Placement_Date__c</columns>
        <columns>Programme__c</columns>
        <columns>Referral_TEO__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2013</value>
        </filters>
        <filters>
            <field>Programme__c</field>
            <operation>contains</operation>
            <value>Linkage</value>
        </filters>
        <filters>
            <field>Legacy_Edit_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2013</value>
        </filters>
        <label>Linkage Status Report 2013</label>
    </listViews>
</CustomObject>